# template-python-fastapi-authen

./: .env  .env.example  README.md  pyproject.toml  requirements.txt
app/: api.py
app/font/THSarabunNew/: THSarabunNew Bold.pkl  THSarabunNew Italic.cw127.pkl  THSarabunNew Italic.pkl  THSarabunNew.pkl
app/models/: model_auth.py
app/routers/: auth.py  post.py
app/services/: service_authen.py  service_jwt.py
